fix text align hotel gallery

--- a/assets/admin/css/admin.less
+++ b/assets/admin/css/admin.less
@@ -156,6 +156,13 @@ img.settings-demo-gallery{
     padding: 4px;
 
 }
+.wb-form-group-gallery{
+    margin-bottom: 18px;
+    margin-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+}
 .gallery-row{
     margin-left: -15px;
     margin-right: -15px;
